@@ -3,6 +3,8 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Changed on_topic args to: full source hashref, new topic array
+    * on_topic is now triggered for any topic change, regardless of source.
     * Now parsing numeric 004.
     * Added hook on_isupport.
     * Added a BotStats module for returning statistics about the bot.
